# esportsjobs.quest-v2

./: .gitignore  CLAUDE.md  MOONSHOT_RESTART.md  Plan.md  next.config.ts  package-lock.json  package.json
agent/: main.py  requirements.txt
agent-new/: pyproject.toml
agent-new/src/: agent.py
agent/tools/: job_search.py  user_context.py  zep_memory.py
app/: globals.css  layout.tsx  manifest.json  page.tsx  sitemap.ts
app/aardvark-swift-alternative/: page.tsx
app/book/: page.tsx
app/british-esports-jobs/: page.tsx
app/cloud9-careers/: page.tsx
app/components/: AnimatedSectionHeader.tsx  AnimatedTagline.tsx  AuthorityLogos.tsx  Calendly.tsx  CharacterSection.tsx  CopilotSidebarBackground.tsx  CrossLinkBanner.tsx  EditableGraph3D.tsx  EsportsCopilotSidebar.tsx  FloatingContactWidget.tsx  FloatingVoice.tsx  GamerHero.tsx  GlobalCopilotUI.tsx  HeyCompanies.tsx  HlsVideoInit.tsx  JobEmbed.tsx  JobMatchCard.tsx  JobSearch.tsx  LazyYouTube.tsx  MuxVideo.tsx  NewsSection.tsx  PageAwareContent.tsx  RealJobsSection.tsx  ShareButton.tsx  SidebarPanels.tsx  SkillsGraph.tsx  ThreeCareerShowcase.tsx  ThreeScene.tsx  ThreeSidebarBackground.tsx  ThreeSpotlightWalk.tsx  UnifiedFooter.tsx  UnifiedHeader.tsx  UserProfileGraph.tsx  VoiceInput.tsx
app/contact/: layout.tsx  page.tsx
app/counter-strike-jobs/: page.tsx
app/dashboard/: page.tsx
app/esports-agency/: page.tsx
lib/: character-config.ts  gamification.ts  jobs-data.ts  news-data.ts
public/: robots.txt
scripts/: create-networking-tables.sql  create-user-profile-items.sql  run-networking-migration.mjs
(+87 files in other folders)
